--- a/inner_circle/philo/philo_bonus/Makefile
+++ b/inner_circle/philo/philo_bonus/Makefile
@@ -2,9 +2,9 @@ CC = cc
 
 CFLAGS = -Wall -Werror -Wextra
 
-NAME = philo
+NAME = philo_bonus
 
-SRCS = main.c
+SRCS = main_bonus.c philo_action_bonus.c philo_init_bonus.c philo_routine_bonus.c philo_utils_bonus.c
 
 OBJS = $(SRCS:.c=.o)
 
