--- a/inner_circle/.vscode/settings.json
+++ b/inner_circle/.vscode/settings.json
@@ -38,6 +38,8 @@
         "ft_printf_bonus.h": "c",
         "fractol_bonus.h": "c",
         "checker_bonus.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "types.h": "c",
+        "philo_bonus.h": "c"
     }
 }
