--- a/inner_circle/philo/philo_bonus/Makefile
+++ b/inner_circle/philo/philo_bonus/Makefile
@@ -4,7 +4,8 @@ CFLAGS = -Wall -Werror -Wextra
 
 NAME = philo_bonus
 
-SRCS = main_bonus.c philo_action_bonus.c philo_init_bonus.c philo_routine_bonus.c philo_utils_bonus.c
+SRCS = main_bonus.c philo_action_bonus.c philo_init_bonus.c philo_routine_bonus.c \
+		philo_utils_bonus.c
 
 OBJS = $(SRCS:.c=.o)
 
