--- a/inner_circle/philo/philo_fork/Makefile
+++ b/inner_circle/philo/philo_fork/Makefile
@@ -1,10 +1,11 @@
 CC = cc
 
-CFLAGS = -Wall -Werror -Wextra 
+CFLAGS = -Wall -Werror -Wextra -O2
 
 NAME = philo
 
-SRCS = main.c philo_action.c philo_init.c philo_routine1.c philo_routine2.c philo_util.c
+SRCS = main.c philo_action.c philo_init.c philo_routine1.c philo_routine2.c \
+		philo_util.c philo_routine3.c
 
 OBJS = $(SRCS:.c=.o)
 
