--- a/inner_circle/philo/philo_fork/Makefile
+++ b/inner_circle/philo/philo_fork/Makefile
@@ -1,6 +1,6 @@
 CC = cc
 
-CFLAGS = -g -Wall -Werror -Wextra -fsanitize=thread
+CFLAGS = -g -Wall -Werror -Wextra -fsanitize=thread -O0
 
 NAME = philo
 
