--- a/inner_circle/philo/philo_fork/Makefile
+++ b/inner_circle/philo/philo_fork/Makefile
@@ -1,6 +1,6 @@
 CC = cc
 
-CFLAGS = -g -Wall -Werror -Wextra -O0
+CFLAGS = -g -Wall -Werror -Wextra -fsanitize=address -march=native -O2
 
 NAME = philo
 
