--- a/inner_circle/Circle05/cpp08/ex00/Makefile
+++ b/inner_circle/Circle05/cpp08/ex00/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: minsepar <minsepar@student.42.fr>          +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/20 14:54:41 by minsepar          #+#    #+#              #
-#    Updated: 2024/06/10 18:34:17 by minsepar         ###   ########.fr        #
+#    Updated: 2024/06/16 05:14:11 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,7 @@ all:	$(NAME)
 	$(CXX) $(CXXFLAGS) -I. -c $< -o $@
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) -I. $(OBJS) -o $(NAME);
+	$(CXX) $(CXXFLAGS) -I. $(OBJS) -o $(NAME)
 
 clean:
 	@rm -rf $(OBJS)
