--- a/outer_circle/libasm/Makefile
+++ b/outer_circle/libasm/Makefile
@@ -6,7 +6,7 @@
 #    By: minsepar <minsepar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/25 21:11:30 by minsepar          #+#    #+#              #
-#    Updated: 2025/02/28 18:24:41 by minsepar         ###   ########.fr        #
+#    Updated: 2025/02/28 22:35:14 by minsepar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ SRC_BASE ?= $(SRC_DIR)
 # SRCS = ft_strlen_xmm.asm ft_strcpy.asm
 
 SRCS = 	ft_strlen.asm ft_strcpy.asm ft_strcmp.asm ft_write.asm ft_read.asm \
-		
+		ft_strdup.asm ft_isspace.asm ft_atoi_base.asm
 
 OBJ_DIR = objs
 
@@ -41,7 +41,8 @@ CC = cc
 
 TEST_SRC = 	tests/main.c tests/utils.c  tests/test_ft_strcpy.c \
 			tests/test_ft_strlen.c tests/test_ft_strcmp.c \
-			tests/test_ft_write.c tests/test_ft_read.c
+			tests/test_ft_write.c tests/test_ft_read.c \
+			
 			
 
 TEST_EXE = a.out
