--- a/outer_circle/libasm/Makefile
+++ b/outer_circle/libasm/Makefile
@@ -6,7 +6,7 @@
 #    By: minsepar <minsepar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/25 21:11:30 by minsepar          #+#    #+#              #
-#    Updated: 2025/03/01 21:19:49 by minsepar         ###   ########.fr        #
+#    Updated: 2025/03/02 22:44:21 by minsepar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,8 @@ SRCS = 	ft_strlen.asm ft_strcpy.asm ft_strcmp.asm ft_write.asm ft_read.asm \
 		
 
 BONUS_SRCS =	ft_atoi_base_bonus.asm ft_create_elem_bonus.asm \
-				ft_list_push_front_bonus.asm
+				ft_list_push_front_bonus.asm ft_list_size_bonus.asm	\
+				ft_list_sort_bonus.asm
 
 C_SRCS =		ft_list_clear_bonus.c
 
@@ -52,7 +53,8 @@ TEST_SRC = 	tests/utils.c  tests/test_ft_strcpy.c \
 			tests/test_ft_write.c tests/test_ft_read.c \
 			
 TEST_BONUS_SRC =	tests/test_ft_atoi_base.c tests/test_ft_create_elem.c \
-					tests/test_ft_list_push_front.c
+					tests/test_ft_list_push_front.c tests/test_ft_list_size.c \
+					tests/test_ft_list_sort.c
 
 TEST_EXE = a.out
 
