--- a/outer_circle/malloc/.vscode/settings.json
+++ b/outer_circle/malloc/.vscode/settings.json
@@ -12,6 +12,8 @@
         "dlmchunk.h": "c",
         "dlconfig.h": "c",
         "unistd.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "random": "c",
+        "string.h": "c"
     }
 }
