--- a/outer_circle/malloc/Makefile
+++ b/outer_circle/malloc/Makefile
@@ -2,7 +2,7 @@ ifeq ($(HOSTTYPE),)
 	HOSTTYPE := $(shell uname -m)_$(shell uname -s)
 endif
 
-SRC = bins.c dldllist.c dlfree.c dlmalloc.c globals.c utils.c
+SRC = bins.c dldllist.c dlfree.c dlmalloc.c globals.c utils.c calloc.c
 
 SRCS = $(addprefix src/, $(SRC))
 
@@ -12,7 +12,7 @@ NAME = libft_malloc_$(HOSTTYPE).so
 
 CC = cc
 
-CFLAGS = -Wall -Wextra -Werror -I./include -g -O0
+CFLAGS = -Wall -Wextra -Werror -I./include -g -O0 #-fsanitize=address
 
 SOFLAGS = -shared -fPIC
 
@@ -37,6 +37,6 @@ fclean:
 re:
 
 test: $(NAME)
-	$(CC) -I./include -o ./a.out src/main.c ./$(NAME)
+	$(CC) -I./include -o ./a.out src/main.c
 
 .PHONY: all clean fclean re
