--- a/outer_circle/malloc/Makefile
+++ b/outer_circle/malloc/Makefile
@@ -2,7 +2,7 @@ ifeq ($(HOSTTYPE),)
 	HOSTTYPE := $(shell uname -m)_$(shell uname -s)
 endif
 
-SRC = bins.c dldllist.c dlfree.c dlmalloc.c globals.c utils.c calloc.c
+SRC = bins.c dldllist.c dlfree.c dlmalloc.c utils.c calloc.c realloc.c
 
 SRCS = $(addprefix src/, $(SRC))
 
@@ -12,19 +12,22 @@ NAME = libft_malloc_$(HOSTTYPE).so
 
 CC = cc
 
-CFLAGS = -Wall -Wextra -Werror -I./include -g -O0 #-fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -lcriterion -I./include -g -O0 #-fsanitize=address
 
 SOFLAGS = -shared -fPIC
 
+TEST_SRC = tests/dldllist_test.c tests/test_main.c tests/init_test.c
 
+TEST_OBJS = $(TEST_SRC:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(SOFLAGS) $(OBJS) -o $(NAME)
 
-src/%.o : src/%.c
+%.o : %.c
 	$(CC) $(CFLAGS) $(SOFLAGS) -c $< -o $@
+	
 
 clean:
 	rm -rf src/*.o
@@ -33,10 +36,11 @@ fclean:
 	make clean
 	rm $(NAME)
 	rm a.out
+	rm tests/*.o
 
-re:
+test: $(TEST_OBJS)
+	$(CC) -g -I./include -I./tests -o ./a.out $(TEST_OBJS) ./$(NAME)
 
-test: $(NAME)
-	$(CC) -I./include -o ./a.out src/main.c
+re: fclean all
 
 .PHONY: all clean fclean re
