--- a/outer_circle/malloc/Makefile
+++ b/outer_circle/malloc/Makefile
@@ -2,7 +2,7 @@ ifeq ($(HOSTTYPE),)
 	HOSTTYPE := $(shell uname -m)_$(shell uname -s)
 endif
 
-SRC = bins.c dldllist.c dlfree.c dlmalloc.c utils.c calloc.c realloc.c
+SRC = bins.c dldllist.c dlfree.c dlmalloc.c utils.c realloc.c dlmchunk.c log.c
 
 SRCS = $(addprefix src/, $(SRC))
 
@@ -12,11 +12,12 @@ NAME = libft_malloc_$(HOSTTYPE).so
 
 CC = cc
 
-CFLAGS = -Wall -Wextra -Werror -lcriterion -I./include -g -O0 #-fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -I./include -g -Ofast #-fsanitize=address
 
 SOFLAGS = -shared -fPIC
 
-TEST_SRC = tests/dldllist_test.c tests/test_main.c tests/init_test.c
+TEST_SRC = 	tests/dldllist_test.c tests/test_main.c tests/init_test.c \
+			tests/malloc_free_test.c tests/realloc_test.c tests/utils.c tests/calloc_test.c \
 
 TEST_OBJS = $(TEST_SRC:.c=.o)
 
@@ -34,12 +35,12 @@ clean:
 
 fclean:
 	make clean
-	rm $(NAME)
-	rm a.out
-	rm tests/*.o
+	rm -rf $(NAME)
+	rm -rf a.out
+	rm -rf tests/*.o
 
-test: $(TEST_OBJS)
-	$(CC) -g -I./include -I./tests -o ./a.out $(TEST_OBJS) ./$(NAME)
+test: $(TEST_OBJS) $(NAME)
+	$(CC) -g -O0 -I./include -I./tests -o ./a.out $(TEST_OBJS) ./$(NAME)
 
 re: fclean all
 
